# Interactive-Voting-App

./: New UI Draft.md  README.md  VoteCounter.tsx  index.html  package-lock.json  package.json  tailwind.config.cjs
Game1 - 2 Party Voting/: README.md  package-lock.json
Game1 - 2 Party Voting/UI Interface Samples/: README.md
Game1 - 2 Party Voting/src/: App.tsx
Game1 - 2 Party Voting/src-tauri/: tauri.conf.json
Game1 - 2 Party Voting/src-tauri/icons/: icon.icns
Game1 - 2 Party Voting/src/components/: VoteCounter.tsx
Gmae2 - 2 Party Voting with background/: index.html  package-lock.json  package.json
Gmae2 - 2 Party Voting with background/src/: VotingGame.tsx  main.tsx
electron/: main.js
release/: Vote Counter-1.0.0.dmg.blockmap  builder-effective-config.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: VoteCounter.tsx
