[package]
name = "vote-counter"
version = "1.0.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"

[dependencies]
tauri = { version = "2.0.0-beta.9", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
